--- a/.travis.yml
+++ b/.travis.yml
@@ -20,10 +20,10 @@ script: tox
 deploy:
   provider: pypi
   distributions: sdist bdist_wheel
-  user: wailamjonathanlee
+  user: opyenxes
   password:
     secure: PLEASE_REPLACE_ME
   on:
     tags: true
-    repo: wailamjonathanlee/opyenxes
+    repo: opyenxes/OpyenXes
     python: 2.7
